# gerenciador_de_playlists

./: CMakeLists.txt  Doxyfile  README.md  arquivo_de_texto.txt
include/: Lista.h  Musica.h  No.h  Playlist.h
src/: Musica.cpp  Playlist.cpp  main.cpp
